src/test/deca/context/invalid/testIdentifierNotDeclared.deca
// Description : Identificateur non déclaré
{
    x = 2;
}
